@@ -87,7 +87,7 @@ namespace Server
 
 			if ( m_Path == null )
 				repath = true;
-			else if ( (!m_Path.Success || goal != m_LastGoalLoc) && (m_LastPathTime + RepathDelay) <= DateTime.Now )
+			else if ( (!m_Path.Success || goal != m_LastGoalLoc) && (m_LastPathTime + RepathDelay) <= DateTime.UtcNow )
 				repath = true;
 			else if ( m_Path.Success && Check( m_From.Location, m_LastGoalLoc, 0 ) )
 				repath = true;
@@ -95,7 +95,7 @@ namespace Server
 			if ( !repath )
 				return false;
 
-			m_LastPathTime = DateTime.Now;
+			m_LastPathTime = DateTime.UtcNow;
 			m_LastGoalLoc = goal;
 
 			m_Path = new MovementPath( m_From, goal );
