@@ -2,6 +2,8 @@ sunuo (0.4.1) unstable; urgency=low
 
   * continued memory optimizations
     - eliminated most DateTime.Now calls
+    - all other DateTime.Now calls are converted to DateTime.UtcNow to avoid
+      time zone lookups
   * lock m_Accounts in Accounting.Accounts
 
  --
